Fix for input focus indication being cut off.

--- a/templates/2k11/admin/style.css
+++ b/templates/2k11/admin/style.css
@@ -1876,13 +1876,7 @@ input[name="serendipity[filter][fileCategory]"] {
         clear: left;
     }
 
-    .configuration_group .form_select,
-    .configuration_group .form_multiselect,
-    .configuration_group .form_field,
-    .configuration_group .form_area,
-    .configuration_group fieldset > fieldset,
-    #serendipityScaleImg,
-    .media_file header {
+    #serendipityScaleImg {
         overflow: hidden;
     }
 
